--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "comentario": "se debe instalar del-cli con: npm install --global del-cli   y  copyfiles con npm install copyfiles -g",
+    "comentario": "se debe instalar del-cli con: npm install --global del-cli   y  copyfiles con npm install copyfiles -g .  Para instalar angular material ejecutar ng add @angular/material, seleccionar yes, indigo/pink, yes,  include and enable animations",
     "build:href": "ng build --base-href ./",
     "delete:docs": "del docs",
     "copy:dist": "copyfiles dist/03-gifs-app/browser/* ./docs -f",
