--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "comentario": "se debe instalar del-cli con: npm install --global del-cli   y  copyfiles con npm install copyfiles -g .  Para instalar angular material ejecutar ng add @angular/material, seleccionar yes, indigo/pink, yes,  include and enable animations",
+    "comentario": "se debe instalar del-cli con: npm install --global del-cli   y  copyfiles con npm install copyfiles -g .  Para instalar angular material ejecutar ng add @angular/material, seleccionar yes, indigo/pink, yes,  include and enable animations.  Tambien se debe instalar json-server con:   npm install json-server  esto es de forma global,     npm install --save-dev json-server para instalarlo solo en el proyecto actual y para usarlo se ha creado el script backend",
+    "backend": "json-server data/db.json",
     "build:href": "ng build --base-href ./",
     "delete:docs": "del docs",
     "copy:dist": "copyfiles dist/03-gifs-app/browser/* ./docs -f",
@@ -26,6 +27,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
